--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -2,6 +2,8 @@
 \graphicspath{{01-Modularite/}}
 
 \minitoc
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%
 % Intro du chapitre : Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques:  
 % se placer dans le contexte de 
@@ -10,18 +12,14 @@
 % - réseaux de neurones
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
+Les systèmes d'information sont le fruit d'un travail de construction et de recherche, cherchant à créer de nouveaux comportements dans une architecture globale. En particulier, la recherche en systèmes d'intelligence artificielles cherche sans cesse à créer de nouvelles structures afin de générer des comportements. Nous introduisons des règles de calcul entre des modules plus simples qui sont des cartes auto-organisatrices. 
 
+Ces règles utilisent des propriétés topologiques des cartes de Kohonen et sont créées dans l'idée d'avoir un système décentralisé entre les cartes. On espère ainsi ouvrir les cartes de Kohonen à du calcul décentralisé. L'idée que l'interaction entre des cartes amène de nouveaux comportement n'est pas nouvelle: elle se base sur l'émergence de comportements dans les systèmes complexes.
 
+Un système complexe est un système dans lequel de nombreux composant interagissent de façon non-linéaire, avec des rétro-actions. De ce fait, il est difficile d'appréhender et de comprendre un tel système sans le simuler. Ces systèmes présentent notamment des propriétés d'auto-organisation.
 
+Cette émergence de comportement est étudiée dans les réseaux biologique, et a été beaucoup utilisée pour la création de nouveaux paradigmes d'apprentissage automatiques. 
 
-%Question et raisonnement du chapitre ( a placer dans les différentes sections ) 
-%
-%Un système complexe est un système dans lequel de nombreux composant interagissent de façon non-linéaire, avec des rétro-actions. De ce fait, il est difficile d'appréhender et de comprendre un tel système sans le simuler. Ces systèmes présentent notamment des propriétés d'auto-organisation.
-%Nous chercherons dans cette thèse à construire un réseau de neurone en en assemblant des plus simples avec rétroaction. 
-%Pourquoi est ce intéressant d'explorer les réseaux de neurones d'un point de vue des systèmes complexes et modulaires ? 
-%Qu'est ce qu'on appelle modularité ? 
-%Quelles pistes ont déjà été explorées à ce sujet ? 
-%
 %
 %
 %
@@ -255,7 +253,7 @@
 %% SECTION 3: quel intéret à utiliser des architectures modulaires pour l'apprentissage ? 
 %% - 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
+
 %\section{Intérêt computationnel des réseaux modulaires, et comment les construire}
 %
 %Les réseaux modulaires sont ainsi prépondérants dans les systèmes "réels", les systèmes présents dans la nature (réseaux de neurones, biologiques...) ou les réseaux émergents de l'interaction entre humains (réseaux sociaux, réseaux des citations entre auteurs). On retrouve dans tous ces réseaux une structure commune modulaire hiéarchique, parfois avec un aspect invariant d'échelle, les réseaux présentant des hubs. Cette structure de réseau est loin d'un réseau aléatoire et a donc été sélectionné par l'évolution ou les interactions locales. On peut se demander si les réseaux biologiques résultant d'une évolution sélective sont modulaire parce que cette structure présente des avantages computationnels, ou si c'est parce qu'ils résultent d'une évolution sélective modifiant des parties du réseau, qu'ils sont modulaires. 
