--- a/main.tex
+++ b/main.tex
@@ -51,11 +51,12 @@
 \input{01-Modularite/Modularite}
 \input{02-SOM/SOM}
 \input{03-Representation/Representation}
-\input{03-Algorithme/Algorithme}
+%\input{03-Algorithme/Algorithme}
 \input{04-Analyse/Analyse}
 \input{Conclusion}
 
 %Bibliography files
-\bibliography{biblio_modularite.bib}
+\bibliography{01-Modularite/biblio_modularite.bib,03-Representation/biblio_representation.bib}
+
 \bibliographystyle{plain}
 \end{document}
