--- a/Notations.tex
+++ b/Notations.tex
@@ -30,7 +30,7 @@
 %---------------------------
 % (6) Map index
 %---------------------------
-\newcommand\m[1]{^({#1})}
+\newcommand\m[1]{^{({#1})}}
 
 %---------------------------
 % (7) BMU
