--- a/03-Representation/biblio_representation.bib
+++ b/03-Representation/biblio_representation.bib
@@ -21,3 +21,17 @@
   year={2019},
   volume={4}
 }
+
+@article{2004kraskov,
+   title={Estimating mutual information},
+   volume={69},
+   ISSN={1550-2376},
+   url={http://dx.doi.org/10.1103/PhysRevE.69.066138},
+   DOI={10.1103/physreve.69.066138},
+   number={6},
+   journal={Physical Review E},
+   publisher={American Physical Society (APS)},
+   author={Kraskov, Alexander and Stögbauer, Harald and Grassberger, Peter},
+   year={2004},
+   month={Jun}
+}
